--- a/invessence/modules/web/src/main/webapp/spark/login.xhtml
+++ b/invessence/modules/web/src/main/webapp/spark/login.xhtml
@@ -31,7 +31,8 @@
                  style="margin-top:5%; background-image:url(/spark/resources/spark-layout/images/loginpageillust.svg); background-repeat:no-repeat; background-position:center; background-size:cover;">
                 <div class="Container90 Fnone MarAuto TexAlCenter">
                     <div class="EmptyBox50"></div>
-                    <h:graphicImage name="images/LOGO.png" styleClass="Fleft" library="spark-layout" class="MarAuto MarTop20 MarBot10"/>
+                    <h:graphicImage id="logo" name="images/LOGO.png" styleClass="Fleft" library="spark-layout"
+                                    class="MarAuto MarTop20 MarBot10" style="height: 40px"/>
                     <div class="EmptyBox20"></div>
                     <p:inputText value="" placeholder="Username" styleClass="Container80 Fnone MarAuto Fs18"/>
                     <div class="EmptyBox10"></div>
@@ -57,6 +58,7 @@
         <h:outputStylesheet name="css/font-awesome.css" library="spark-layout" />
         <h:outputStylesheet name="css/animate.css" library="spark-layout" />
         <h:outputStylesheet name="css/spark-layout.css" library="spark-layout" />
+        <h:outputStylesheet name="css/invessence.css" library="spark-layout" />
     </h:body>
 
 </html>
