--- a/invessence/modules/web/src/main/webapp/login.xhtml
+++ b/invessence/modules/web/src/main/webapp/login.xhtml
@@ -5,6 +5,11 @@
       xmlns:ui="http://java.sun.com/jsf/facelets"
       xmlns:p="http://primefaces.org/ui">
 
+<f:metadata>
+    <f:viewParam name="cid" value="#{menu.cid}"/>
+    <f:event type="preRenderView" listener="#{menu.preRenderView}"/>
+</f:metadata>
+
 <h:head>
     <f:facet name="first">
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -35,7 +40,8 @@
                     <f:event listener="#{loginController.updateMessages}" type="preRenderView"/>
 
                     <div class="EmptyBox50"></div>
-                    <h:graphicImage name="#{menu.logo}" styleClass="Fleft" library="spark-layout" class="MarAuto MarTop20 MarBot10"/>
+                    <h:graphicImage id="logo" name="#{menu.logo}" styleClass="Fleft" library="spark-layout"
+                                    class="MarAuto MarTop20 MarBot10" style="height: 40px"/>
                     <div class="EmptyBox20"></div>
                     <p:inputText id="j_username" placeholder="Username" styleClass="Container80 Fnone MarAuto Fs18"
                                  required="true"
