--- a/invessence/modules/web/src/main/webapp/message.xhtml
+++ b/invessence/modules/web/src/main/webapp/message.xhtml
@@ -1,14 +1,9 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
-        "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://java.sun.com/jsf/html"
       xmlns:f="http://java.sun.com/jsf/core"
       xmlns:ui="http://java.sun.com/jsf/facelets"
       xmlns:p="http://primefaces.org/ui">
-
-<h:head>
-</h:head>
 
 <f:metadata>
     <f:viewParam name="type" value="#{messageBean.type}"/>
@@ -17,42 +12,69 @@
     <f:viewParam name="support" value="#{messageBean.supportInfo}"/>
 </f:metadata>
 
+<h:head>
+    <f:facet name="first">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"/>
+        <meta name="apple-mobile-web-app-capable" content="yes"/>
+    </f:facet>
+    <title>Invessence - Login</title>
+    <h:outputScript name="js/layout.js" library="spark-layout"/>
+
+    <h:outputText value="&lt;!--[if gte IE 9]&gt;" escape="false"/>
+    <style type="text/css">
+            /* styles for IE 9 */
+    </style>
+    <h:outputText value="&lt;![endif]--&gt;" escape="false"/>
+
+
+    <ui:insert name="head"/>
+</h:head>
+
 <h:body>
 
-    <ui:composition template="/template/common/commonSecuredLayout.xhtml">
+    <h:form>
 
-        <ui:define name="content">
+        <div id="layout-portlets-cover">
+            <div class="other-pages-box Container40 Responsive50 MarAuto Fnone TexAlCenter ShadowGray MarTop10"
+                 style="margin-top:5%;">
+                <div class="Container90 Fnone MarAuto TexAlCenter">
+                    <div class="EmptyBox50"></div>
+                    <h:graphicImage id="logo" name="#{menu.logo}" styleClass="Fleft" library="spark-layout"
+                                    class="MarAuto MarTop20 MarBot10"/>
 
-            <div id="main-content" class="content_section" style="background-color: #f5f5f5; padding: 10px;">
-                <div id="wrapper" class="container">
-                    <p:panel style="width:730px;text-align: left; position:relative;border: 0px;">
-                        <p:panelGrid styleClass="invNBgrid">
-                            <p:row>
-                                <p:column colspan="4" style="border-collapse: collapse; width: 100%; text-align: left;">
-                                    <p:outputLabel value="#{messageBean.title}" style="#{messageBean.titleColor}" escape="false"/>
-                                </p:column>
-                            </p:row>
-                            <p:row>
-                                <p:column colspan="4">
-                                    <br/><br/>
-                                    <h4><h:outputText value="#{messageBean.message}" escape="false"/></h4>
-                                </p:column>
-                            </p:row>
-                            <p:row>
-                                <p:column colspan="4">
-                                    <br/>
-                                    <p:outputLabel value="#{messageBean.supportInfo}" escape="false"/>
-                                </p:column>
-                            </p:row>
+                    <div class="EmptyBox20"></div>
+                    <div class="Container90">
+                        <h1>
+                            <span style="#{messageBean.titleColor}">
+                            #{messageBean.title}
+                            </span>
+                        </h1>
+                    </div>
+                    <div class="EmptyBox20"></div>
 
-                        </p:panelGrid>
-                    </p:panel>
+                    <div class="Container90 TexAlLeft">
+                        <h:outputText value="#{messageBean.message}" escape="false"/>
+                    </div>
+                    <div class="EmptyBox20"></div>
+                    <div class="Container90 TexAlLeft">
+                        <h:outputText value="#{messageBean.supportInfo}" escape="false"/>
+                    </div>
+                </div>
+                <div class="Container90 TexAlCenter">
+                    <p:commandButton value="OK"
+                                     actionListener="#{menu.redirectStartPage}"/>
                 </div>
             </div>
+        </div>
+    </h:form>
 
-        </ui:define>
 
-    </ui:composition>
+    <h:outputStylesheet name="css/core-layout.css" library="spark-layout" />
+    <h:outputStylesheet name="css/font-awesome.css" library="spark-layout" />
+    <h:outputStylesheet name="css/animate.css" library="spark-layout" />
+    <h:outputStylesheet name="css/spark-layout.css" library="spark-layout" />
 
 </h:body>
 
