--- a/invessence/modules/web/src/main/webapp/pages/advisor/marketing.xhtml
+++ b/invessence/modules/web/src/main/webapp/pages/advisor/marketing.xhtml
@@ -1,29 +1,24 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
-        "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:h="http://java.sun.com/jsf/html"
-      xmlns:f="http://java.sun.com/jsf/core"
-      xmlns:ui="http://java.sun.com/jsf/facelets"
-      xmlns:p="http://primefaces.org/ui"
-      xmlns:pe="http://primefaces.org/ui/extensions">
-<h:body>
+<ui:composition xmlns="http://www.w3.org/1999/xhtml"
+                xmlns:h="http://java.sun.com/jsf/html"
+                xmlns:f="http://java.sun.com/jsf/core"
+                xmlns:ui="http://java.sun.com/jsf/facelets"
+                xmlns:p="http://primefaces.org/ui"
+                template="/template/common/invlayout.xhtml">
 
-    <ui:composition template="/template/common/layout.xhtml">
-
-        <ui:define name="content">
-            <div id="main-content" class="content_section" style="background-color: #f5f5f5;">
-                <div id="wrapper" class="container" style="padding-top: 20px">
+    <ui:define name="content">
+        <div class="layout-portlets-box">
+            <div class="Container20 Responsive">
+                <div class="ContainerIndent">
                     <h:form id="marketingForm">
                         <p:messages id="msgs" showDetail="true"/>
 
                         <h:panelGrid columns="2" style="margin-bottom:10px" cellpadding="5">
-                            <p:outputLabel value="Filter:" />
-                               <p:selectOneButton value="#{marketingBean.selectedFilter}">
-                               <f:selectItem itemLabel="ALL" itemValue="" />
-                               <f:selectItem itemLabel="Pending" itemValue="P" />
-                               <f:selectItem itemLabel="Active" itemValue="A" />
-                               <p:ajax update="@form" listener="#{marketingBean.refreshButton}" />
+                            <p:outputLabel value="Filter:"/>
+                            <p:selectOneButton value="#{marketingBean.selectedFilter}">
+                                <f:selectItem itemLabel="ALL" itemValue=""/>
+                                <f:selectItem itemLabel="Pending" itemValue="P"/>
+                                <f:selectItem itemLabel="Active" itemValue="A"/>
+                                <p:ajax update="@form" listener="#{marketingBean.refreshButton}"/>
                             </p:selectOneButton>
                         </h:panelGrid>
 
@@ -34,7 +29,7 @@
                                 Export Data
                                 <h:commandLink>
                                     <p:graphicImage value="/images/excel.png" width="24"/>
-                                    <p:dataExporter type="xls" target="marketingTable" fileName="Clients" />
+                                    <p:dataExporter type="xls" target="marketingTable" fileName="Clients"/>
                                 </h:commandLink>
 
                                 <h:commandLink>
@@ -47,16 +42,16 @@
                                       resizable="true"
                                       sortBy="#{mi.acctstatus}">
                                 <f:facet name="header">
-                                    <h:outputText value="Status" />
+                                    <h:outputText value="Status"/>
                                 </f:facet>
-                                <h:outputText value="#{mi.acctstatus}" />
+                                <h:outputText value="#{mi.acctstatus}"/>
                             </p:column>
 
                             <p:column style="width:12%;text-align: left"
                                       resizable="true"
                                       sortBy="#{mi.created}">
                                 <f:facet name="header">
-                                    <h:outputText value="Created" />
+                                    <h:outputText value="Created"/>
                                 </f:facet>
                                 <h:outputText value="#{mi.created}"/>
                             </p:column>
@@ -64,7 +59,7 @@
                                       resizable="true"
                                       sortBy="#{mi.acctnum}">
                                 <f:facet name="header">
-                                    <h:outputText value="Acct#" />
+                                    <h:outputText value="Acct#"/>
                                 </f:facet>
                                 <h:outputText value="#{mi.acctnum}"/>
                             </p:column>
@@ -72,7 +67,7 @@
                                       resizable="true"
                                       sortBy="#{mi.firstname}">
                                 <f:facet name="header">
-                                    <h:outputText value="First name" />
+                                    <h:outputText value="First name"/>
                                 </f:facet>
                                 <h:outputText value="#{mi.firstname}"/>
                             </p:column>
@@ -80,7 +75,7 @@
                                       resizable="true"
                                       sortBy="#{mi.lastname}">
                                 <f:facet name="header">
-                                    <h:outputText value="Last name" />
+                                    <h:outputText value="Last name"/>
                                 </f:facet>
                                 <h:outputText value="#{mi.lastname}"/>
                             </p:column>
@@ -88,13 +83,13 @@
                                       resizable="true"
                                       sortBy="#{mi.email}">
                                 <f:facet name="header">
-                                    <h:outputText value="Email" />
+                                    <h:outputText value="Email"/>
                                 </f:facet>
                                 <h:outputText value="#{mi.email}"/>
                             </p:column>
                             <p:column exportable="false" style="width:5%;text-align: center">
                                 <f:facet name="header">
-                                    <h:outputText value="View" />
+                                    <h:outputText value="View"/>
                                 </f:facet>
                                 <p:commandButton update=":marketingForm:marketingDetail"
                                                  oncomplete="PF('marketingDDialog').show()" icon="ui-icon-search"
@@ -151,10 +146,7 @@
                     </h:form>
                 </div>
             </div>
-        </ui:define>
+        </div>
+    </ui:define>
 
-    </ui:composition>
-
-</h:body>
-
-</html>
+</ui:composition>
