--- a/invessence/modules/web/src/main/webapp/pages/common/myprofile.xhtml
+++ b/invessence/modules/web/src/main/webapp/pages/common/myprofile.xhtml
@@ -34,68 +34,90 @@
                             <p:ajax event="tabChange" listener="#{profileBean.onTabChange}" update="@form"/>
 
                             <p:tab title="User Profile">
-                                <p:panelGrid columns="2" layout="grid" style="border:0px !important; background:none;" class="FormContent">
-                                    <h:outputLabel value="User ID" styleClass="Wid90"/>
-                                    <h:outputLabel value="#{profileBean.userData.userID}" styleClass="Wid90"/>
-                                    <h:outputLabel value="New Email (Optional)" styleClass="Wid90"/>
-                                    <p:inputText value="#{profileBean.userData.email}" styleClass="Wid90" placeholder="Email (new)"/>
-                                    <h:outputLabel value="Reset Password (Optional)" styleClass="Wid90"/>
-                                    <p:password id="pwd1" value="#{profileBean.userData.password}" styleClass="Wid90" placeholder="New Password"
-                                                match="pwd2" label="Password"
-                                                feedback="true" inline="true"
-                                                validatorMessage="Password does not match criteria.">
-                                        <f:validateRegex
-                                                pattern="^.*(?=.{8,})(?=.*[a-zA-Z])(?=.*\d)(?=.*[!#$%?]).*$"/>
-                                    </p:password>
-                                    <h:outputLabel value="Retype Password (Optional)" styleClass="Wid90"/>
-                                    <p:password id="pwd2" value="#{profileBean.userData.confirmNewPassword}" styleClass="Wid90"
-                                                placeholder="Confirm Password"/>
-                                </p:panelGrid>
+                                <p:panel style="border: 0px">
+                                    <p:panelGrid columns="3" layout="grid"
+                                                 style="border:0px !important; padding: 5px !important; background:none;" class="FormContent">
+                                        <h:outputLabel value="User ID" styleClass="Wid80"/>
+                                        <h:outputLabel value="#{profileBean.userData.userID}" styleClass="Wid100"/>
+                                        <h:outputText styleClass="Wid80"/>
+
+                                        <h:outputLabel value="Password" styleClass="Wid80"/>
+                                        <p:password id="pwd1" value="#{profileBean.userData.password}" styleClass="Wid100" placeholder="New Password"
+                                                    match="pwd2" label="Password"
+                                                    feedback="true" inline="true"
+                                                    validatorMessage="Password does not match criteria.">
+                                            <f:validateRegex
+                                                    pattern="^.*(?=.{8,})(?=.*[a-zA-Z])(?=.*\d)(?=.*[!#$%?]).*$"/>
+                                        </p:password>
+                                        <p:commandButton id="pwdHelp" value="See rules" process="@none"/>
+
+                                        <h:outputLabel value="Confirm Password" styleClass="Wid80"/>
+                                        <p:password id="pwd2" value="#{profileBean.userData.confirmNewPassword}" styleClass="Wid100"
+                                                    placeholder="Confirm Password"/>
+                                        <h:outputText styleClass="Wid80"/>
+
+                                        <p:overlayPanel id="helpPanel" for="pwdHelp" hideEffect="fade" dynamic="true"
+                                                        showCloseIcon="true"
+                                                        style="width:300px">
+                                            Password Must contain a minimum of 8 Characters including at least:
+                                            <ul>
+                                                <li>1 uppercase letter</li>
+                                                <li>1 number</li>
+                                                <li>1 of these special characters: !,#,$,%,?</li>
+                                            </ul>
+                                        </p:overlayPanel>
+                                    </p:panelGrid>
+                                    <f:facet name="footer">
+                                        <p:commandButton value="Save" ajax="true" styleClass="TexAlCenter"
+                                                         update="@form"
+                                                         actionListener="#{profileBean.save('security')}"/>
+                                    </f:facet>
+                                </p:panel>
                             </p:tab>
                             <p:tab title="Security Questions">
 
+                                <h:outputText colspan="2" value="These below questions and answers will be used to further authenticate you when needed." styleClass="Wid90"/>
                                 <p:panelGrid columns="2" layout="grid" style="border:0px !important; background:none;" class="FormContent">
-                                    <h:outputText colspan="2" value="These below questions and answers will be used to further authenticate you when needed." styleClass="Wid90"/>
 
-                                    <h:outputLabel value="Select One" styleClass="Wid90"/>
+                                    <h:outputLabel value="Select One" styleClass="Wid40"/>
                                     <p:selectOneMenu id="q1" value="#{profileBean.userData.q1}"
-                                                     styleClass="invSelectOneMenu">
+                                                     styleClass="Wid60">
                                         <f:selectItem itemLabel="Choose One" itemValue=""/>
                                         <f:selectItems value="#{profileBean.userData.getQuestion(0).entrySet()}"
                                                        var="q1" itemLabel="#{q1.value}" itemValue="#{q1.value}"/>
                                     </p:selectOneMenu>
 
-                                    <h:outputLabel value="Answer" styleClass="Wid90"/>
+                                    <h:outputLabel value="Answer" styleClass="Wid40"/>
                                     <p:inputText id="a1" value="#{profileBean.userData.ans1}" label="Answer#1"
-                                                 size="30" maxlength="40">
+                                                 styleClass="Wid60">
                                         <p:watermark for="a1" value="Answer"/>
                                     </p:inputText>
 
-                                    <h:outputLabel value="Choose Favorite" styleClass="Wid90"/>
+                                    <h:outputLabel value="Choose Favorite" styleClass="Wid40"/>
                                     <p:selectOneMenu id="q2" value="#{profileBean.userData.q2}"
-                                                     styleClass="invSelectOneMenu">
+                                                     styleClass="Wid60">
                                         <f:selectItem itemLabel="Choose One" itemValue=""/>
                                         <f:selectItems value="#{profileBean.userData.getQuestion(1).entrySet()}"
                                                        var="q2" itemLabel="#{q2.value}" itemValue="#{q2.value}"/>
                                     </p:selectOneMenu>
 
-                                    <h:outputLabel value="Answer" styleClass="Wid90"/>
+                                    <h:outputLabel value="Answer" styleClass="Wid40"/>
                                     <p:inputText id="a2" value="#{profileBean.userData.ans2}" label="Answer#2"
-                                                 size="30" maxlength="40">
+                                                 styleClass="Wid60">
                                         <p:watermark for="a2" value="Answer"/>
                                     </p:inputText>
 
-                                    <h:outputLabel value="Describe" styleClass="Wid90"/>
+                                    <h:outputLabel value="Describe" styleClass="Wid40"/>
                                     <p:selectOneMenu id="q3" value="#{profileBean.userData.q3}"
-                                                     styleClass="invSelectOneMenu">
+                                                     styleClass="Wid60">
                                         <f:selectItem itemLabel="Choose One" itemValue=""/>
                                         <f:selectItems value="#{profileBean.userData.getQuestion(2).entrySet()}"
                                                        var="q3" itemLabel="#{q3.value}" itemValue="#{q3.value}"/>
                                     </p:selectOneMenu>
 
-                                    <h:outputLabel value="Answer" styleClass="Wid90"/>
+                                    <h:outputLabel value="Answer" styleClass="Wid40"/>
                                     <p:inputText id="a3" value="#{profileBean.userData.ans3}" label="Answer#3"
-                                                 size="30" maxlength="40">
+                                                 styleClass="Wid60">
                                         <p:watermark for="a3" value="Answer"/>
                                     </p:inputText>
                                     <f:facet name="footer">
