--- a/invessence/modules/web/src/main/webapp/pages/consumer/q1.xhtml
+++ b/invessence/modules/web/src/main/webapp/pages/consumer/q1.xhtml
@@ -5,18 +5,25 @@
                 xmlns:p="http://primefaces.org/ui"
                 xmlns:pe="http://primefaces.org/ui/extensions">
 
-    <h3>
-        1. What is your employment situation?
-    </h3>
-    <p:selectOneRadio value="#{cepb.selectedchoice1}"
-                      layout="pageDirection"
-                      valueChangeListener="#{cepb.onChangeValue}">
-        <f:selectItem itemLabel="My job is very secure." itemValue="0" />
-        <f:selectItem itemLabel="My job security could change quickly." itemValue="1" />
-        <f:selectItem itemLabel="I am not working or retired but have secure income." itemValue="2" />
-        <f:selectItem itemLabel="I feel my job is not secure." itemValue="3" />
-        <f:selectItem itemLabel="I am currently unemployed or retired." itemValue="14" />
-    </p:selectOneRadio>
+    <p:panel style="border: 0px">
+    <div class="Container100 Responsive50">
+    <div class="ContainerIndent">
+        <h3>
+            1. What is your employment situation?
+        </h3>
+        <p:selectOneRadio value="#{cepb.selectedchoice1}"
+                          layout="pageDirection">
+            <p:ajax listener="#{cepb.onChangeValue}"
+                    update=":ceForm:workArea, :ceForm:graphArea"/>
+            <f:selectItem itemLabel="My job is very secure." itemValue="0" />
+            <f:selectItem itemLabel="My job security could change quickly." itemValue="1" />
+            <f:selectItem itemLabel="I am not working or retired but have secure income." itemValue="2" />
+            <f:selectItem itemLabel="I feel my job is not secure." itemValue="3" />
+            <f:selectItem itemLabel="I am currently unemployed or retired." itemValue="14" />
+        </p:selectOneRadio>
+    </div>
+    </div>
+    </p:panel>
 
 
 </ui:composition>
