--- a/invessence/modules/web/src/main/webapp/pages/consumer/q2.xhtml
+++ b/invessence/modules/web/src/main/webapp/pages/consumer/q2.xhtml
@@ -5,14 +5,22 @@
                 xmlns:p="http://primefaces.org/ui"
                 xmlns:pe="http://primefaces.org/ui/extensions">
 
-    <h3>
-        2. Do you have any other sources of income?
-    </h3>
-    <p:selectOneRadio value="#{cepb.onChangeValue}"
-                      layout="pageDirection"
-                      valueChangeListener="#{cepb.onChange}">
-        <f:selectItem itemLabel="Yes" itemValue="0" />
-        <f:selectItem itemLabel="No" itemValue="4" />
-    </p:selectOneRadio>
+    <p:panel style="border: 0px">
+    <div class="Container100 Responsive50">
+        <div class="ContainerIndent">
+            <h3>
+                2. Do you have any other sources of income?
+            </h3>
+            <p:selectOneRadio value="#{cepb.selectedchoice2}"
+                              layout="pageDirection">
+                <p:ajax listener="#{cepb.onChangeValue}"
+                        update=":ceForm:workArea, :ceForm:graphArea"/>
+                <f:selectItem itemLabel="Yes" itemValue="0" />
+                <f:selectItem itemLabel="No" itemValue="4" />
+            </p:selectOneRadio>
+        </div>
+    </div>
+    </p:panel>
+
 
 </ui:composition>
