--- a/invessence/modules/web/src/main/webapp/pages/consumer/q3.xhtml
+++ b/invessence/modules/web/src/main/webapp/pages/consumer/q3.xhtml
@@ -5,17 +5,25 @@
                 xmlns:p="http://primefaces.org/ui"
                 xmlns:pe="http://primefaces.org/ui/extensions">
 
-    <h3>
-        3. What is your financial situation, including expenses, loans, savings for retirement and emergencies?
-    </h3>
-    <p:selectOneRadio value="#{cepb.selectedchoice3}"
-                      layout="pageDirection"
-                      valueChangeListener="#{cepb.onChangeValue}">
-        <f:selectItem itemLabel="I feel very secure about all my financial needs." itemValue="0" />
-        <f:selectItem itemLabel="I feel fairly secure." itemValue="1" />
-        <f:selectItem itemLabel="I feel secure for the next 12 months." itemValue="2" />
-        <f:selectItem itemLabel="I don’t feel very secure." itemValue="3" />
-        <f:selectItem itemLabel="I don’t feel at all secure." itemValue="14" />
-    </p:selectOneRadio>
+    <p:panel style="border: 0px">
+    <div class="Container100 Responsive50">
+        <div class="ContainerIndent">
+            <h3>
+                3. What is your financial situation, including expenses, loans, savings for retirement and emergencies?
+            </h3>
+            <p:selectOneRadio value="#{cepb.selectedchoice3}"
+                              layout="pageDirection">
+                <p:ajax listener="#{cepb.onChangeValue}"
+                        update=":ceForm:workArea, :ceForm:graphArea"/>
+                <f:selectItem itemLabel="I feel very secure about all my financial needs." itemValue="0" />
+                <f:selectItem itemLabel="I feel fairly secure." itemValue="1" />
+                <f:selectItem itemLabel="I feel secure for the next 12 months." itemValue="2" />
+                <f:selectItem itemLabel="I don’t feel very secure." itemValue="3" />
+                <f:selectItem itemLabel="I don’t feel at all secure." itemValue="14" />
+            </p:selectOneRadio>
+        </div>
+    </div>
+    </p:panel>
+
 
 </ui:composition>
