--- a/invessence/modules/web/src/main/webapp/pages/consumer/q5.xhtml
+++ b/invessence/modules/web/src/main/webapp/pages/consumer/q5.xhtml
@@ -5,17 +5,26 @@
                 xmlns:p="http://primefaces.org/ui"
                 xmlns:pe="http://primefaces.org/ui/extensions">
 
-    <h3>
-        5. What best describes your investment approach?
-    </h3>
-    <p:selectOneRadio value="#{cepb.selectedchoice5}"
-                      layout="pageDirection"
-                      valueChangeListener="#{cepb.onChangeValue}">
-        <f:selectItem itemLabel="Aggressive – long-term growth." itemValue="0" />
-        <f:selectItem itemLabel="Moderately aggressive – long-term growth." itemValue="7" />
-        <f:selectItem itemLabel="Conservative – preserve capital more than growth." itemValue="14" />
-        <f:selectItem itemLabel="Ultra conservative – safe with very low risk." itemValue="25" />
-        <f:selectItem itemLabel="No risk – all cash." itemValue="28" />
-    </p:selectOneRadio>
+    <p:panel style="border: 0px">
+    <div class="Container100 Responsive50">
+        <div class="ContainerIndent">
+            <h3>
+                5. What best describes your investment approach?
+            </h3>
+            <p:selectOneRadio value="#{cepb.selectedchoice5}"
+                              layout="pageDirection">
+                <p:ajax listener="#{cepb.onChangeValue}"
+                        update=":ceForm:workArea, :ceForm:graphArea"/>
+                <f:selectItem itemLabel="Aggressive – long-term growth." itemValue="0" />
+                <f:selectItem itemLabel="Moderately aggressive – long-term growth." itemValue="7" />
+                <f:selectItem itemLabel="Conservative – preserve capital more than growth." itemValue="14" />
+                <f:selectItem itemLabel="Ultra conservative – safe with very low risk." itemValue="25" />
+                <f:selectItem itemLabel="No risk – all cash." itemValue="28" />
+            </p:selectOneRadio>
+
+        </div>
+    </div>
+    </p:panel>
+
 
 </ui:composition>
