--- a/invessence/modules/web/src/main/webapp/pages/consumer/q6.xhtml
+++ b/invessence/modules/web/src/main/webapp/pages/consumer/q6.xhtml
@@ -5,16 +5,24 @@
                 xmlns:p="http://primefaces.org/ui"
                 xmlns:pe="http://primefaces.org/ui/extensions">
 
-    <h3>
-        6. What level of volatility are you prepared to accept?
-    </h3>
-    <p:selectOneRadio value="#{cepb.selectedchoice6}"
-                      layout="pageDirection"
-                      valueChangeListener="#{cepb.onChangeValue}">
-        <f:selectItem itemLabel="High – I am comfortable with volatility." itemValue="0" />
-        <f:selectItem itemLabel="Moderate – Up to half volatile and half balanced." itemValue="14" />
-        <f:selectItem itemLabel="Medium – Stable annual return with low volatility." itemValue="21" />
-        <f:selectItem itemLabel="None – No volatility." itemValue="28" />
-    </p:selectOneRadio>
+    <p:panel style="border: 0px">
+    <div class="Container100 Responsive50">
+        <div class="ContainerIndent">
+            <h3>
+                6. What level of volatility are you prepared to accept?
+            </h3>
+            <p:selectOneRadio value="#{cepb.selectedchoice6}"
+                              layout="pageDirection">
+                <p:ajax listener="#{cepb.onChangeValue}"
+                        update=":ceForm:workArea, :ceForm:graphArea"/>
+                <f:selectItem itemLabel="High – I am comfortable with volatility." itemValue="0" />
+                <f:selectItem itemLabel="Moderate – Up to half volatile and half balanced." itemValue="14" />
+                <f:selectItem itemLabel="Medium – Stable annual return with low volatility." itemValue="21" />
+                <f:selectItem itemLabel="None – No volatility." itemValue="28" />
+            </p:selectOneRadio>
+        </div>
+    </div>
+    </p:panel>
+
 
 </ui:composition>
