--- a/invessence/modules/web/src/main/webapp/pages/consumer/q7.xhtml
+++ b/invessence/modules/web/src/main/webapp/pages/consumer/q7.xhtml
@@ -5,17 +5,26 @@
                 xmlns:p="http://primefaces.org/ui"
                 xmlns:pe="http://primefaces.org/ui/extensions">
 
-    <h3>
-        7. What is your long-term investment intention?
-    </h3>
-    <p:selectOneRadio value="#{cepb.selectedchoice7}"
-                      layout="pageDirection"
-                      valueChangeListener="#{cepb.onChangeValue}">
-        <f:selectItem itemLabel="Majority of my assets at higher risk, for greater returns." itemValue="0" />
-        <f:selectItem itemLabel="More than half my assets at higher risk, for greater returns." itemValue="7" />
-        <f:selectItem itemLabel="Up to half my assets at higher risk, to balance stability with greater returns." itemValue="14" />
-        <f:selectItem itemLabel="Less than a quarter of my assets at higher risk, to keep up with inflation." itemValue="25" />
-        <f:selectItem itemLabel="None of my assets at high risk, to preserve capital." itemValue="28" />
-    </p:selectOneRadio>
+    <p:panel style="border: 0px">
+
+    <div class="Container100 Responsive50">
+        <div class="ContainerIndent">
+            <h3>
+                7. What is your long-term investment intention?
+            </h3>
+            <p:selectOneRadio value="#{cepb.selectedchoice7}"
+                              layout="pageDirection">
+                <p:ajax listener="#{cepb.onChangeValue}"
+                        update=":ceForm:workArea, :ceForm:graphArea"/>
+                <f:selectItem itemLabel="Majority of my assets at higher risk, for greater returns." itemValue="0" />
+                <f:selectItem itemLabel="More than half my assets at higher risk, for greater returns." itemValue="7" />
+                <f:selectItem itemLabel="Up to half my assets at higher risk, to balance stability with greater returns." itemValue="14" />
+                <f:selectItem itemLabel="Less than a quarter of my assets at higher risk, to keep up with inflation." itemValue="25" />
+                <f:selectItem itemLabel="None of my assets at high risk, to preserve capital." itemValue="28" />
+            </p:selectOneRadio>
+        </div>
+    </div>
+    </p:panel>
+
 
 </ui:composition>
