--- a/invessence/modules/web/src/main/webapp/setPassword.xhtml
+++ b/invessence/modules/web/src/main/webapp/setPassword.xhtml
@@ -1,6 +1,4 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
-        "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://java.sun.com/jsf/html"
       xmlns:f="http://java.sun.com/jsf/core"
@@ -8,6 +6,23 @@
       xmlns:p="http://primefaces.org/ui">
 
 <h:head>
+    <f:facet name="first">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"/>
+        <meta name="apple-mobile-web-app-capable" content="yes"/>
+    </f:facet>
+    <title>Invessence - Register</title>
+    <h:outputScript name="js/layout.js" library="spark-layout"/>
+
+    <h:outputText value="&lt;!--[if gte IE 9]&gt;" escape="false"/>
+    <style type="text/css">
+            /* styles for IE 9 */
+    </style>
+    <h:outputText value="&lt;![endif]--&gt;" escape="false"/>
+
+
+    <ui:insert name="head"/>
 </h:head>
 
 <f:metadata>
@@ -16,105 +31,85 @@
     <f:event type="preRenderView" listener="#{resetPasswordData.preRenderView}"/>
 </f:metadata>
 
+
 <h:body>
 
-    <ui:composition template="/template/common/commonLayout.xhtml">
+    <div id="layout-portlets-cover">
+        <div class="other-pages-box Container40 Responsive50 MarAuto Fnone TexAlLeft ShadowGray MarTop10"
+             style="margin-top:5%;">
+            <div class="Container90 Fnone MarAuto TexAlLeft">
+                <div class="EmptyBox20"></div>
+                <h:form>
+                    <h:graphicImage id="logo" name="#{menu.logo}" styleClass="Fleft" library="spark-layout"
+                                    class="MarAuto MarTop20 MarBot10"/>
 
+                    <div class="EmptyBox10"></div>
+                    <div class="Container90">
+                        <p:growl id="sgrowl"/>
+                    </div>
+                    <div class="EmptyBox5"></div>
+                    <p:panel id="signup" styleClass="Container100" style="border:0px">
 
-        <ui:define name="content">
+                        <p:panel id="p1" styleClass="Container100 Responsive50" style="border: 0px" rendered="#{userBean.sTab == 0}">
+                            <div class="Container90 Responsive50">
+                                <div class="ContainerIndent">
+                                </div>
+                                <p:panelGrid columns="3" layout="grid"
+                                             style="border:0px !important; padding: 5px !important; padding-right: 5px; background:none;" class="FormContent">
+                                    <h:outputLabel value="User ID" styleClass="Wid80"/>
+                                    <h:inputText id="emailID" value="#{resetPasswordData.emailID}"
+                                                 disabled="true" />
+                                    <h:inputHidden id="resetCode" value="#{resetPasswordData.resetCode}"/>
 
+                                    <h:outputLabel value="Password" styleClass="Wid80"/>
+                                    <p:password id="pwd1" value="#{resetPasswordData.password}"
+                                                match="pwd2" label="Password" required="true"
+                                                feedback="true" inline="true"
+                                                requiredMessage="Password is required."
+                                                validatorMessage="Password does not match criteria.">
+                                        <f:validateRegex
+                                                pattern="^.*(?=.{8,})(?=.*[a-zA-Z])(?=.*\d)(?=.*[!#$%?]).*$"/>
+                                    </p:password>
+                                    <p:commandButton id="pwdHelp" value="See rules" process="@none"/>
 
-            <div id="main-content" class="content_section" style="background-color: #f5f5f5; padding: 50px;">
-                <div id="wrapper" class="container">
-                    <center>
-                        <h:form>
+                                    <h:outputLabel value="Confirm Password" styleClass="Wid80"/>
+                                    <p:password id="pwd2" value="#{resetPasswordData.confirmPassword}"
+                                                requiredMessage="Confirmation password much match."
+                                                label="Password 2" required="true"/>
+                                    <h:outputText styleClass="Wid80"/>
 
-                            <p:panel header="Set Password"
-                                     style="width:630px;text-align: left; position:relative;">
-                                <p:panelGrid id="setPwdGrid" styleClass="invNBgrid">
-                                    <p:row>
-                                    <p:column colspan="3">
-                                        <p:messages id="messages" autoUpdate="true" closable="true"/>
-                                    </p:column>
-                                    </p:row>
-
-                                    <p:row>
-                                        <p:column>
-                                            <h:outputLabel value="Userid"/>
-                                        </p:column>
-                                        <p:column colspan="2">
-                                            <h:inputText id="emailID" value="#{resetPasswordData.emailID}"
-                                                         size="40" disabled="true" />
-                                        </p:column>
-                                    </p:row>
-
-                                    <p:row>
-                                        <p:column>
-                                            <h:outputLabel value="Password"/>
-                                        </p:column>
-                                        <p:column>
-                                            <p:message for="pwd1" display="icon"/>
-                                        </p:column>
-                                        <p:column>
-                                            <p:password id="pwd1" value="#{resetPasswordData.password}"
-                                                        match="pwd2" label="Password" required="true"
-                                                        feedback="true" inline="true"
-                                                        requiredMessage="Password is required."
-                                                        validatorMessage="Password does not match criteria.">
-                                                <f:validateRegex
-                                                        pattern="^.*(?=.{8,})(?=.*[a-zA-Z])(?=.*\d)(?=.*[!#$%?]).*$"/>
-                                            </p:password>
-                                        </p:column>
-                                        <p:column rowspan="5" styleClass="invImportant">
-                                            Password Must contain a minimum of 8 Characters including at least:
-                                            <ul>
-                                                <li>1 uppercase letter</li>
-                                                <li>1 number</li>
-                                                <li>1 of these special characters: !,#,$,%,?</li>
-                                            </ul>
-                                        </p:column>
-                                    </p:row>
-                                    <p:row>
-                                        <p:column>
-                                            <h:outputLabel value="Confirm"/>
-                                        </p:column>
-                                        <p:column>
-                                            <p:message for="pwd2" display="icon"/>
-                                        </p:column>
-                                        <p:column>
-                                            <p:password id="pwd2" value="#{resetPasswordData.confirmPassword}"
-                                                        requiredMessage="Confirmation password much match."
-                                                        label="Password 2" required="true"/>
-                                        </p:column>
-                                    </p:row>
-
-                                    <p:row>
-                                        <p:column>
-                                            <h:commandButton type="submit" value="Set"
-                                                             validateClient="true" update="setPwdGrid"
-                                                             action="#{resetPasswordData.set}"/>
-                                        </p:column>
-                                        <p:column>
-                                            <!--
-                                                        <h:outputText value="#{resetPasswordData.emailID}"/>
-                                                        <h:outputText value="#{resetPasswordData.resetCode}"/>
-                                            -->
-                                        </p:column>
-                                        <p:column>
-                                            <h:inputHidden id="resetCode" value="#{resetPasswordData.resetCode}"/>
-                                        </p:column>
-                                    </p:row>
+                                    <p:overlayPanel id="helpPanel" for="pwdHelp" hideEffect="fade" dynamic="true"
+                                                    showCloseIcon="true"
+                                                    style="width:300px">
+                                        Password Must contain a minimum of 8 Characters including at least:
+                                        <ul>
+                                            <li>1 uppercase letter</li>
+                                            <li>1 number</li>
+                                            <li>1 of these special characters: !,#,$,%,?</li>
+                                        </ul>
+                                    </p:overlayPanel>
                                 </p:panelGrid>
-                            </p:panel>
-                        </h:form>
-                    </center>
+                            </div>
+                        </p:panel>
 
-                </div>
+                        <f:facet name="footer">
+                            <h:commandButton type="submit" value="Set Password" style="float: right"
+                                             validateClient="true" update="@form"
+                                             action="#{resetPasswordData.set}"/>
+                        </f:facet>
+
+                    </p:panel>
+                    <div class="EmptyBox30"></div>
+
+                </h:form>
             </div>
+        </div>
+    </div>
 
-        </ui:define>
-
-    </ui:composition>
+    <h:outputStylesheet name="css/core-layout.css" library="spark-layout"/>
+    <h:outputStylesheet name="css/font-awesome.css" library="spark-layout"/>
+    <h:outputStylesheet name="css/animate.css" library="spark-layout"/>
+    <h:outputStylesheet name="css/spark-layout.css" library="spark-layout"/>
 
 </h:body>
 
