--- a/invessence/modules/web/src/main/webapp/signup.xhtml
+++ b/invessence/modules/web/src/main/webapp/signup.xhtml
@@ -28,133 +28,72 @@
 <h:body>
     <div id="layout-portlets-cover">
         <div class="other-pages-box Container40 Responsive50 MarAuto Fnone TexAlCenter ShadowGray MarTop10"
-             style="margin-top:5%; background-image:url(/spark/resources/spark-layout/images/loginpageillust.svg); background-repeat:no-repeat; background-position:center; background-size:cover;">
-            <div class="Container90 Fnone MarAuto TexAlCenter">
+             style="margin-top:5%;">
+            <div class="Container90 Fnone MarAuto TexAlLeft">
+                <div class="EmptyBox20"></div>
                 <h:form>
-                    <div class="EmptyBox50"></div>
-                    <h:graphicImage name="images/LOGO.png" styleClass="Fleft" library="spark-layout" class="MarAuto MarTop20 MarBot10"/>
-
-                    <div class="EmptyBox20"></div>
-                    <p:panelGrid columns="2" layout="grid" style="border:0px !important; background:none;" class="FormContent">
-                        <p:inputText id="firstName" styleClass="Container40 Fnone MarAuto Fs18"
-                                     value="#{userBean.firstName}" placeholder="FirstName"
-                                     required="true" requiredMessage="Please enter First Name.">
-                        </p:inputText>
-                        <p:inputText id="lastName" styleClass="Container40 Fnone MarAuto Fs18"
-                                     value="#{userBean.lastName}" placeholder="Last Name"
-                                     required="true" requiredMessage="Please enter Last Name.">
-                            <p:watermark for="lastName" value="Last Name"/>
-                        </p:inputText>
-                    </p:panelGrid>
-
+                    <h:graphicImage id="logo" name="#{menu.logo}" styleClass="Fleft" library="spark-layout"
+                                    class="MarAuto MarTop20 MarBot10"/>
                     <div class="EmptyBox10"></div>
-
-                    <p:inputText id="email" styleClass="Container80 Fnone MarAuto Fs18"
-                                 value="#{userBean.beanEmail}" placeholder="Email"
-                                 required="true" requiredMessage="Please enter Email.">
-                        <p:watermark for="email" value="Email Address"/>
-                    </p:inputText>
-
-                    <div class="EmptyBox10"></div>
-
-                    <p:panelGrid columns="2" layout="grid" style="border:0px !important; background:none;" class="FormContent">
-                        <h:outputLabel value="State of Residence" styleClass="Container40 Fnone MarAuto Fs18"/>
-                        <p:selectOneMenu id="state" value="#{userBean.stateCode}"
-                                         styleClass="invSelectOneMenu" required="true"
-                                         requiredMessage="Please select your state of resident.">
-                            <f:selectItem itemLabel="-- Choose one --" itemValue=""/>
-                            <f:selectItems value="#{userBean.usstates.entrySet()}"
-                                           var="state" itemLabel="#{state.value}" itemValue="#{state.key}"/>
-                        </p:selectOneMenu>
-                    </p:panelGrid>
-
-                    <div class="EmptyBox10"></div>
-
-                    <h:outputText value="Please select your three security questions and provide the answers."
-                                  styleClass="Container90 Fnone MarAuto Fs18">
-                    </h:outputText>
-
-                    <div class="EmptyBox10"></div>
-
-                    <p:panelGrid columns="2" layout="grid" style="border:0px !important; background:none;" class="FormContent">
-                        <h:outputLabel value="Select One" styleClass="Container20 Fnone MarAuto Fs18"/>
-                        <p:selectOneMenu id="q1" value="#{userBean.q1}"
-                                         styleClass="Container70 Fnone MarAuto Fs18"
-                                         required="true"
-                                         requiredMessage="Please select question #1.">
-                            <f:selectItem itemLabel="Choose One" itemValue=""/>
-                            <f:selectItems value="#{userBean.getQuestion(0).entrySet()}"
-                                           var="q1" itemLabel="#{q1.value}" itemValue="#{q1.value}"/>
-                        </p:selectOneMenu>
-                    </p:panelGrid>
-
-                    <div class="EmptyBox10"></div>
-
-                    <p:panelGrid columns="2" layout="grid" style="border:0px !important; background:none;" class="FormContent">
-                        <h:outputLabel value="Answer" styleClass="Container20 Fnone MarAuto Fs18"/>
-                        <p:inputText id="a1" value="#{userBean.ans1}" styleClass="Container70 Fnone MarAuto Fs18"
-                                     placeholder="Answer"
-                                     required="true" requiredMessage="Please enter an answer for question#1.">
-                            <p:watermark for="a1" value="Answer"/>
-                        </p:inputText>
-                    </p:panelGrid>
-
-                    <div class="EmptyBox10"></div>
-
-                    <p:panelGrid columns="2" layout="grid" style="border:0px !important; background:none;" class="FormContent">
-                        <h:outputLabel value="Choose favorite" styleClass="Container20 Fnone MarAuto Fs18"/>
-                        <p:selectOneMenu id="q2" value="#{userBean.q2}"
-                                         styleClass="Container70 Fnone MarAuto Fs18"
-                                         required="true"
-                                         requiredMessage="Please select question #2.">
-                            <f:selectItem itemLabel="Choose One" itemValue=""/>
-                            <f:selectItems value="#{userBean.getQuestion(1).entrySet()}"
-                                           var="q2" itemLabel="#{q2.value}" itemValue="#{q2.value}"/>
-                        </p:selectOneMenu>
-                    </p:panelGrid>
-
-                    <div class="EmptyBox10"></div>
-
-                    <p:panelGrid columns="2" layout="grid" style="border:0px !important; background:none;" class="FormContent">
-                        <h:outputLabel value="Answer" styleClass="Container20 Fnone MarAuto Fs18"/>
-                        <p:inputText id="a2" value="#{userBean.ans2}" styleClass="Container70 Fnone MarAuto Fs18"
-                                     placeholder="Answer"
-                                     required="true" requiredMessage="Please enter an answer for question#2.">
-                            <p:watermark for="a2" value="Answer"/>
-                        </p:inputText>
-                    </p:panelGrid>
-
-                    <div class="EmptyBox10"></div>
-
-                    <p:panelGrid columns="2" layout="grid" style="border:0px !important; background:none;" class="FormContent">
-                        <h:outputLabel value="Enter your question" styleClass="Container30 Fnone MarAuto Fs18"/>
-                        <p:inputText id="q3" value="#{userBean.q3}" placeholder="Create your own question"
-                                     required="true" requiredMessage="Please enter question#3.">
-                            <p:watermark for="q3" value="Create your own question"/>
-                        </p:inputText>
-                    </p:panelGrid>
-
-                    <div class="EmptyBox10"></div>
-
-                    <p:panelGrid columns="2" layout="grid" style="border:0px !important; background:none;" class="FormContent">
-                        <h:outputLabel value="Answer" styleClass="Container20 Fnone MarAuto Fs18"/>
-                        <p:inputText id="a3" value="#{userBean.ans3}" styleClass="Container70 Fnone MarAuto Fs18"
-                                     placeholder="Answer"
-                                     required="true" requiredMessage="Please enter an answer for question#3.">
-                            <p:watermark for="a3" value="Answer"/>
-                        </p:inputText>
-                    </p:panelGrid>
-
-                    <div class="EmptyBox20"></div>
-                    <div class="Container85 Fnone MarAuto softgray">
-                        <div class="EmptyBox5"></div>
-                        <p:selectBooleanCheckbox value="accept" itemLabel="I Accept Terms And Policies"/>
+                    <div class="Container90">
+                        <p:growl id="sgrowl"/>
                     </div>
-                    <div class="EmptyBox30"></div>
-                    <p:commandButton value="Register" id="btn" ajax="true" styleClass="Fs16"
-                                     actionListener="#{userBean.signUp2}"/>
+                    <div class="EmptyBox5"></div>
+                    <p:panel id="signup" styleClass="Container100" style="border:0px">
 
-                    <div class="EmptyBox50"></div>
+                        <p:panel id="p1" styleClass="Container100 Responsive50" style="border: 0px">
+                            <div class="Container50 Responsive50">
+                                <div class="ContainerIndent">
+                                <p:inputText id="firstName" styleClass="Container95 Fleft MarAuto Fs18"
+                                             value="#{userBean.firstName}" placeholder="FirstName"
+                                             required="true" requiredMessage="Please enter First Name.">
+                                </p:inputText>
+                                </div>
+                            </div>
+                            <div class="Container50 Responsive50">
+                                <div class="ContainerIndent">
+                                <p:inputText id="lastName" styleClass="Container95 Fleft MarAuto Fs18"
+                                             value="#{userBean.lastName}" placeholder="Last Name"
+                                             required="true" requiredMessage="Please enter Last Name.">
+                                    <p:watermark for="lastName" value="Last Name"/>
+                                </p:inputText>
+                            </div>
+                            </div>
+                            <div class="EmptyBox10"></div>
+                            <div class="Container100">
+                            <div class="ContainerIndent">
+                                <p:inputText id="email" styleClass="Container80 Fleft MarAuto Fs18"
+                                             value="#{userBean.beanEmail}" placeholder="Email"
+                                             required="true" requiredMessage="Please enter Email."
+                                        validatorMessage="Email format is not correct.">
+                                    <p:watermark for="email" value="Email Address"/>
+                                </p:inputText>
+
+                            </div>
+                            </div>
+                            <div class="EmptyBox10"></div>
+                            <div class="Container100">
+                            <div class="ContainerIndent">
+                                <h:outputLabel value="State of Residence" styleClass="Container40 Fleft MarAuto Fs18"/>
+                                <p:selectOneMenu id="state" value="#{userBean.stateCode}"
+                                                 styleClass="Container40 Fleft MarAuto Fs18" required="true"
+                                                 requiredMessage="Please select your state of resident.">
+                                    <f:selectItem itemLabel="-- Choose one --" itemValue=""/>
+                                    <f:selectItems value="#{userBean.usstates.entrySet()}"
+                                                   var="state" itemLabel="#{state.value}" itemValue="#{state.key}"/>
+                                </p:selectOneMenu>
+                            </div>
+                            </div>
+                        </p:panel>
+
+                        <f:facet name="footer">
+                            <p:commandButton value="Register" type="submit" styleClass="Fright"
+                                             update="@form"
+                                             actionListener="#{userBean.signUp}"/>
+                        </f:facet>
+
+                    </p:panel>
+                    <div class="EmptyBox20"></div>
                 </h:form>
             </div>
         </div>
