--- a/invessence/modules/web/src/main/webapp/spark/WEB-INF/template.xhtml
+++ b/invessence/modules/web/src/main/webapp/spark/WEB-INF/template.xhtml
@@ -37,7 +37,7 @@
 
         <p:ajaxStatus style="width:128px;height:128px;position:fixed;right:5px;bottom:5px">
             <f:facet name="start">
-                <p:graphicImage name="demo/images/preloader.gif" />
+                <p:graphicImage name="images/preloader.gif" />
             </f:facet>
 
             <f:facet name="complete">
